--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Outfit:wght@100;300;400;500;600;700;800&display=swap');
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Outfit:wght@100;300;400;500;600;700;800&display=swap');
+
+
+
 
 *{
   margin: 0;
@@ -9,12 +15,29 @@
   box-sizing: border-box;
 }
 
-body {
+h1,p,a {
+  color: #ffff
+}
+
+body { 
   margin: 0;
-  font-family: 'Outfit','Lora', serif;
+  font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: #292a2b;
 }
+ul{
+  list-style-type: none;
+
+}
+
+a {
+  text-decoration: none;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
