--- a/src/pages/AboutS.css
+++ b/src/pages/AboutS.css
@@ -1,9 +1,25 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Outfit', 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
+
+.content h5 {
+    font-size: 2rem;
+    color: #fff;
+    text-align: center;
+}
+
+.content {
+    text-align: center;
+
+}
+
+.content p{
+    text-align: center;
+}
+
 .about{
     width: 100%;
     padding: 78px 0px;
